# ConversaIQ

./: README.md  backend.py
Backend/: README.md  backend.py  main.py  pyproject.toml  requirments.txt
conversaiq/: index.html  package-lock.json  package.json
conversaiq/src/: App.jsx  ConversaIQ.jsx
